src/c/dynamics.h

/**
 * @brief Iteration statistics returned by nonlinear solver routines.
 */
typedef struct {
    /**
     * True when convergence was detected from solution changes.
    */
    bool converge_on_chng;
    /**
     * True when convergence was detected from the function value.
    */
    bool converge_on_fcn;
    /**
     * True when convergence was detected from a zero difference.
    */
    bool converge_on_zero_diff;
    /**
     * Number of function evaluations.
    */
    int fcn_count;
    /**
     * Number of gradient evaluations.
    */
    int gradient_count;
    /**
     * Number of nonlinear iterations.
    */
    int iter_count;
    /**
     * Number of Jacobian evaluations.
    */
    int jacobian_count;
} c_iteration_behavior;
/**
 * @brief A quaternion stored as scalar component followed by vector terms.
 */
typedef struct
{
    /**
     * Scalar quaternion component.
    */
    double w;
    /**
     * First vector quaternion component.
    */
    double x;
    /**
     * Second vector quaternion component.
    */
    double y;
    /**
     * Third vector quaternion component.
    */
    double z;
} c_quaternion;
/**
 * @brief Plane coefficients satisfying `a*x + b*y + c*z + d = 0`.
 */
typedef struct
{
    /**
     * Coefficient of x in the plane equation.
    */
    double a;
    /**
     * Coefficient of y in the plane equation.
    */
    double b;
    /**
     * Coefficient of z in the plane equation.
    */
    double c;
    /**
     * Constant plane coefficient.
    */
    double d;
} c_plane;
/**
 * @brief A line represented by a point and direction vector.
 */
typedef struct
{
    /**
     * A point on the line.
    */
    double r0[3];
    /**
     * Line direction vector.
    */
    double v[3];
} c_line;
/**
 * @brief A Pluecker line represented by direction and moment vectors.
 */
typedef struct
{
    /**
     * Pluecker line direction coordinates.
    */
    double u[3];
    /**
     * Pluecker line moment coordinates.
    */
    double m[3];
} c_plucker_line;
/**
 * @brief An orthonormal coordinate system.
 */
typedef struct 
{
    /**
     * Coordinate-system origin.
    */
    double origin[3];
    /**
     * First unit basis vector.
    */
    double i[3];
    /**
     * Second unit basis vector.
    */
    double j[3];
    /**
     * Third unit basis vector.
    */
    double k[3];
} c_coordinate_system;
/**
 * @brief One Denavit-Hartenberg parameter set.
 */
typedef struct
{
    /**
     * Link length parameter.
    */
    double link_length;
    /**
     * Link twist parameter.
    */
    double link_twist;
    /**
     * Link offset parameter.
    */
    double link_offset;
    /**
     * Joint angle parameter.
    */
    double joint_angle;
} c_dh_parameter_set;
/**
 * @brief A dynamically allocated Denavit-Hartenberg table.
 */
typedef struct
{
    /**
     * Number of parameter sets in the table.
    */
    int count;
    /**
     * Dynamically allocated parameter-set array.
    */
    c_dh_parameter_set *parameters;
} c_dh_table;
/**
 * @brief One link in a serial Denavit-Hartenberg linkage.
 */
typedef struct
{
    /**
     * Link length.
    */
    double link_length;
    /**
     * Link twist.
    */
    double link_twist;
    /**
     * Link offset.
    */
    double link_offset;
    /**
     * Joint angle or displacement.
    */
    double joint_angle;
    /**
     * Joint type, for example DYN_REVOLUTE_JOINT.
    */
    int joint_type;     // DYN_REVOLUTE_JOINT or DYN_PRISMATIC_JOINT
    /**
     * Link mass.
    */
    double mass;
    /**
     * Center-of-gravity position in the link frame.
    */
    double cg[3];
    /**
     * 3-by-3 inertia matrix in column-major storage.
    */
    double inertia[9];  // 3-by-3 matrix in column-major format
} c_binary_link;
/**
 * @brief A serial linkage and its link array.
 */
typedef struct
{
    /**
     * Number of links.
    */
    int link_count;
    /**
     * Link array.
    */
    c_binary_link *links;
} c_serial_linkage;
/**
 * @brief A polynomial with dynamically allocated coefficients.
 */
typedef struct
{
    /**
     * Polynomial order.
    */
    int order;
    /**
     * Coefficients in ascending order of power.
    */
    double *coefficients;
} c_polynomial;
/**
 * @brief A numerator/denominator transfer-function pair.
 */
typedef struct
{
    /**
     * Numerator polynomial.
    */
    c_polynomial numerator;
    /**
     * Denominator polynomial.
    */
    c_polynomial denominator;
} c_transfer_function;
/**
 * @brief A continuous state-space model with column-major matrices.
 */
typedef struct
{
    /**
     * Number of state variables.
    */
    int dimension;
    /**
     * Number of inputs.
    */
    int n_inputs;
    /**
     * Number of outputs.
    */
    int n_outputs;
    /**
     * State matrix, dimension by dimension.
    */
    double *A;  // dimension -by- dimension
    /**
     * Input matrix, dimension by n_inputs.
    */
    double *B;  // dimension -by- n_inputs
    /**
     * Output matrix, n_outputs by dimension.
    */
    double *C;  // n_outputs -by- dimension
    /**
     * Feedthrough matrix, n_outputs by n_inputs.
    */
    double *D;  // n_outputs -by- n_inputs
} c_state_space_model;
/**
 * @}
 */

/**
 * @defgroup dynamics_serial Serial linkage operations
 * @{
 */
/**
 * Allocate a Denavit-Hartenberg table.
 * @param n Number of parameter sets.
 * @param tbl Table initialized by the routine.
 * @return Zero on success; nonzero on allocation failure.
 */
int c_alloc_dh_table(int n, c_dh_table *tbl);
/**
 * Allocate a serial linkage.
 * @param n Link count.
 * @param lnk Linkage initialized by the routine.
 * @return Zero on success; nonzero on allocation failure.
 */
int c_alloc_serial_linkage(int n, c_serial_linkage *lnk);
/**
 * @}
 */

/**
 * @defgroup dynamics_state Transfer functions and state-space models
 * @{
 */
/**
 * Allocate a polynomial.
 * @param order Polynomial order.
 * @param p Polynomial initialized by the routine.
 * @return Zero on success; nonzero on allocation failure.
 */
int c_alloc_polynomial(int order, c_polynomial *p);
/**
 * Allocate a transfer function.
 * @param numer_order Numerator order.
 * @param denom_order Denominator order.
 * @param tf Transfer function initialized by the routine.
 * @return Zero on success; nonzero on allocation failure.
 */
int c_alloc_transfer_function(int numer_order, int denom_order, 
    c_transfer_function *tf);
/**
 * Allocate a continuous state-space model.
 * @param dimension State dimension.
 * @param n_inputs Input count.
 * @param n_outputs Output count.
 * @param mdl Model initialized by the routine.
 * @return Zero on success; nonzero on allocation failure.
 */
int c_alloc_state_space_model(int dimension, int n_inputs, int n_outputs, 
    c_state_space_model *mdl);